--- a/delvito-mutasi.html
+++ b/delvito-mutasi.html
@@ -25,9 +25,9 @@
       </div>
       <div class="search-filter">
         <input class="search" id="search-mutasi" placeholder="Cari Mutasi" />
-        <button class="filter-button" id="filter-button" onclick="openFilter()"> <img src="assets/mutasi/filter.svg" /></button>
-        <button class="sort-button" id="sort-button" onclick="openSort()"> <img src="assets/mutasi/sort-setting.svg" /></button>
-        <button> <img src="assets/mutasi/ascending.svg" /></button>
+        <button class="filter-button" id="filter-button" onclick="openFilter()"> <img src="assets/Mutasi/filter.svg" /></button>
+        <button class="sort-button" id="sort-button" onclick="openSort()"> <img src="assets/Mutasi/sort-setting.svg" /></button>
+        <button> <img src="assets/Mutasi/ascending.svg" /></button>
       </div>
       <div class="subtitle">
         <p class="subtitle-mutasi">Mutasi</p>
