--- a/delvito-rincian-mutasi.html
+++ b/delvito-rincian-mutasi.html
@@ -10,67 +10,73 @@
       href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&family=Manrope:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <script src="scripts/mutasi.js" defer></script>
   </head>
   <body>
     <div class="container">
       <div class="header-text">
         <div class="header-text-n-back">
-            <button onclick="location.href='delvito-mutasi.html'"><img src="assets/Mutasi/back.svg" /></button>
-            <p class="header-text-title">Transfer Ke BCA</p>
+          <button onclick="location.href='delvito-mutasi.html'">
+            <img src="assets/Mutasi/back.svg" />
+          </button>
+          <p class="header-text-title">Transfer Ke BCA</p>
         </div>
-        
+
         <p class="header-text-subtitle">A.N. Maemunah</p>
       </div>
       <div class="background">
         <p class="trf-success">TRANSFER BERHASIL</p>
         <img src="assets/Mutasi/success.svg" />
         <div class="struk">
-            <div class="baris">
-                <p class="baris-kiri">Tanggal</p>
-                <p class="baris-kanan">26 Jan 2023 - 06:59:59</p>
-            </div>
-            <div class="baris">
-                <p class="baris-kiri">Nomor Referensi</p>
-                <p class="baris-kanan">926573103926</p>
-            </div>
-            <div class="baris" style="margin-top:12px">
-                <p class="baris-kiri">Bank Tujuan</p>
-                <p class="baris-kanan">BANK BCA</p>
-            </div>
-            <div class="baris">
-                <p class="baris-kiri">Nomor Rekening</p>
-                <p class="baris-kanan">0111-01-058436-50-7</p>
-            </div>
-            <div class="baris">
-                <p class="baris-kiri">Nama Penerima</p>
-                <p class="baris-kanan">Maemunah</p>
-            </div>
-            <div style="margin-top:12px">
-                <p class="baris-kiri">Catatan</p>
-                <p class="baris-kanan" style="margin-top:8px">Transfer Uang Jas Almamater</p>
-            </div>
+          <div class="baris">
+            <p class="baris-kiri">Tanggal</p>
+            <p class="baris-kanan">26 Jan 2023 - 06:59:59</p>
+          </div>
+          <div class="baris">
+            <p class="baris-kiri">Nomor Referensi</p>
+            <p class="baris-kanan">926573103926</p>
+          </div>
+          <div class="baris" style="margin-top: 12px">
+            <p class="baris-kiri">Bank Tujuan</p>
+            <p class="baris-kanan">BANK BCA</p>
+          </div>
+          <div class="baris">
+            <p class="baris-kiri">Nomor Rekening</p>
+            <p class="baris-kanan">0111-01-058436-50-7</p>
+          </div>
+          <div class="baris">
+            <p class="baris-kiri">Nama Penerima</p>
+            <p class="baris-kanan">Maemunah</p>
+          </div>
+          <div style="margin-top: 12px">
+            <p class="baris-kiri">Catatan</p>
+            <p class="baris-kanan" style="margin-top: 8px">
+              Transfer Uang Jas Almamater
+            </p>
+          </div>
 
-            <div class="baris" style="margin-top:12px">
-                <p class="baris-kiri">Nominal</p>
-                <p class="baris-kanan">Rp148.500</p>
-            </div>
-            <div class="baris">
-                <p class="baris-kiri">Biaya Admin</p>
-                <p class="baris-kanan">Rp1.500</p>
-            </div>
+          <div class="baris" style="margin-top: 12px">
+            <p class="baris-kiri">Nominal</p>
+            <p class="baris-kanan">Rp148.500</p>
+          </div>
+          <div class="baris">
+            <p class="baris-kiri">Biaya Admin</p>
+            <p class="baris-kanan">Rp1.500</p>
+          </div>
 
-            <div class="baris-total">
-                <p class="total-kiri">Total</p>
-                <p class="total-kanan">Rp150.000</p>
-            </div>
+          <div class="baris-total">
+            <p class="total-kiri">Total</p>
+            <p class="total-kanan">Rp150.000</p>
+          </div>
 
-            <p class="share">Bagikan dan Simpan</p>
-            <img src="assets/Mutasi/share.svg" style="height: 90px;"/>
+          <p class="share">Bagikan dan Simpan</p>
+          <img src="assets/Mutasi/share.svg" style="height: 90px" />
 
-            <button class="selesai" onclick="location.href='jovan-home.html'">Selesai</button>
+          <button class="selesai" onclick="location.href='jovan-home.html'">
+            Selesai
+          </button>
         </div>
       </div>
     </div>
